--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -39,7 +39,7 @@
 
 
 <div class="container"> 
-	<div class="flex-item1" style="padding-left: 100px;"><h1  style="margin-top: 0px;">Learn everything in a place</h1>
+	<div class="flex-item1" style="padding-left: auto;"><h1  style="margin-top: 0px;">Learn everything in a place</h1>
 		<p>Seach for courses, get an up-to-date online courses and bookmark your prefered or choiced courses for free.</p>
 	</div>	
 	<div class="flex-item1">
