Test the frontend with dummy data

--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -10,6 +10,8 @@
 <meta name="keywords" content="free good best top online courses choice build career">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="static/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="static/ajax.js"></script>
 <script src="static/script.js"></script>
 </head>
 <body>
@@ -46,14 +48,19 @@
 		<div class="flex-item2">
 			<img src="static/images/img.png" style="width: 170px;">
 			<br><br>
-			<form class="search-container" action="/user" style="width: 100%;">
-				<input type="text" placeholder="Search.." name="search">
-				<button type="submit" name="search"><i class="fa fa-search"></i></button>
+			<form class="search-container" style="width: 100%;">
+				<input id="search-input" type="text" placeholder="Search.." required>
+				<button type="submit"><i class="fa fa-search"></i></button>
 			</form>
 		</div>
 
 	</div>
 </div>
+
+<!-- Search Results comes in here -->
+<div class="result" id="result-head"><h3></h3></div>
+<div class="container" id="search-results"> </div>
+
 
 <br>
 <div class="result"><h3>Recommended</h3></div>
