Get ready for integration

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="static/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="static/ajax.js"></script>
 <script src="static/script.js"></script>
 </head>
 <body>
@@ -96,49 +97,43 @@
 
 
 <div class="container">
-        <div class="flex-item1"><h1 style="margin-top: 0px;">Learn everything in a place</h1>
+        <div class="flex-item1" style="padding-left: auto;"><h1 style="margin-top: 0px;">Learn everything in a place</h1>
                 <p>Seach for courses, get an up-to-date online courses and sign up for free to bookmark your prefered or choiced courses.</p>
         </div>
 
         <div class="flex-item1">
-                <div class="flex-item2"><br><br>
-                        <img src="static/images/img.png" style="width: 200px;">
+                <div class="flex-item2">
+                        <img src="static/images/img.png" style="width: 170px;">
                                 <br><br>
-                                <form class="search-container" action="{{ 'search' }}" method="GET" style="width: 100%;">
-                                        <input type="text" placeholder="Search.." name="search">
-                                        <button type="submit" name="search"><i class="fa fa-search"></i></button>
+                                <form class="search-container" style="width: 100%;">
+                                        <input type="text" id="search-input" placeholder="Search.." required>
+                                        <button type="submit"><i class="fa fa-search"></i></button>
                                 </form>
-                        </div>
+                </div>
 
         </div>
 </div>
-<br>
 
-<p>{{ results }}</p>
-{% if results %}
-<div class="result"><h3>Search Results</h3></div>
+<!-- Search Results comes in here -->
+<div class="result" id="result-head"><h3></h3></div>
+<div class="container" id="search-results"> </div>
+
+<!-- Generate 10 random courses -->
+<div class="result"><h3>Random Courses</h3></div>
 <br>
 
 <div class="container">
-	{% for result in results %}
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;">{{ result.title }}<p>{{ result.instructor }}</p><a href='{{ result.url }}'>visit</a></div>
+	{% for result in r_courses %}
+	<div class="flex-item3">
+		<img src="static/images/img2.png" style="width: 100%;">
+		<b>{{ result.title }}</b>
+		<br><i style="font-size: 0.8em">{{ result.instructor }}</i><br>
+		<button><a href='{{ result.url }}'>Visit</a></button>
+		<button><a href='{{ result.url }}'>Save</a></button>
+	</div>
 	{% endfor %}
 </div>
 
-{% else %}
-	<div class="result"><h3>Recommended</h3></div>
-	<div class="container">
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"> </div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-        	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	</div>
-{% endif %}
 <br>
 <br><br><br>
 <br>
