--- a/static/style.css
+++ b/static/style.css
@@ -222,6 +222,18 @@ div.psw {
 	
 }
 
+.flex-item3 button {
+	background-color: #82CAFF;
+	color: white;
+	cursor: pointer;
+	border: none;
+}
+
+.flex-item3 a {
+	color: white;
+	text-decoration: none;
+}
+
 form.search-container input[type=text] {
 	padding: 10px;
 	margin: 0px;
@@ -268,7 +280,7 @@ form.search-container::after {
 }
 
 .sidenav a {
-	padding: 8px 8px 8px 32px;
+	/*padding: 8px 8px 8px 32px;*/
 	text-decoration: none;
 	font-size: 25px;
 	color: #818181;
