--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -26,12 +26,18 @@
 
 <!-- Sidenav for Courses Bookmark -->
 
-<div id="bookmark" class="sidenav">
+<div id="bookmark_container" class="sidenav">
 	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
-	<a href="#"><img src="static/images/img2.png" style="width: 70%;"></a>
-	<a href="#"><img src="static/images/img2.png" style="width: 70%;"></a>
-	<a href="#"><img src="static/images/img2.png" style="width: 70%;"></a>
+	<!-- Saved Courses for the user comes in here -->
+	{% for result in r_courses %}
+	<div style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
+                <a href='{{ result.url }}'><img src="static/images/img2.png" style="width: 100%;"></a>
+		<div><b style="color: white; font-size: 0.6em;">{{ result.title }}</b></div>
+		<div><i style="font-size: 0.4em; color: white">{{ result.instructor }}</i></div>
+	</div>
+	{% endfor %}
+
 </div>
 
 <!-- End of Sidenav -->
@@ -61,22 +67,19 @@
 <div class="result" id="result-head"><h3></h3></div>
 <div class="container" id="search-results"> </div>
 
-
+<!-- Generate 10 random courses-->
+<div class="result"><h3>Random Courses</h3></div>
 <br>
-<div class="result"><h3>Recommended</h3></div>
-<br>
-
 <div class="container">
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"> </div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"> </div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"> </div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
-	<div class="flex-item3"> <img src="static/images/img2.png" style="width: 100%;"></div>
+	{% for result in r_courses %}
+	<div class="flex-item3">
+		<img src="static/images/img2.png" style="width: 100%;">
+		<b>{{ result.title }}</b>
+		<br><i style="font-size: 0.8em">{{ result.instructor }}</i><br>
+		<button><a href='{{ result.url }}'>Visit</a></button>
+		<button name="{{ result.course_id }}"><a href='{{ result.url }}'>Save</a></button>
+	</div>
+        {% endfor %}
 </div>
 
 </div> <!-- end of main id -->
