--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,17 @@
 <div class="container" id="search-results"> </div>
 
 <!-- Generate 10 random courses -->
-<div class="result"><h3>Random Courses</h3></div>
+<div class="result"><h3>Random Courses</h3>
+	<div>
+		{% for course in courses %}
+			<div>
+				<img src='{{course[2]}}'>
+				<a href='{{course[2]}}'>{{course[1]}}</a> <br> By: {{course[3]}}
+			</div>
+			<br> <hr> <br>
+		{% endfor %}
+	</div>
+</div>
 <br>
 
 <div class="container">
