setting up authentiction methods

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 	<div>
 		{% for course in courses %}
 			<div>
-				<img src='{{course[2]}}'>
+				<img src='../static/images/udemy.jpeg'>
 				<a href='{{course[2]}}'>{{course[1]}}</a> <br> By: {{course[3]}}
 			</div>
 			<br> <hr> <br>
