--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,10 @@
                 <p style="font-size: 16px;">Create an account for free.</p>
                 <hr>
                 <label for="username"><b>Username</b></label>
-                <input type="text" placeholder="Enter Email" name="username" required>
+                <input type="text" placeholder="Enter Username" name="username" required>
+
+		<label for="email"><b>Email</b></label>
+                <input type="email" placeholder="Enter your Email" name="email" required>
 
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required>
