--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -30,15 +30,14 @@
 	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
 	<!-- Saved Courses for the user comes in here -->
-	{% for result in r_courses %}
-	<div style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
+	<!--<div style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
                 <a href='{{ result.url }}'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<div><b style="color: white; font-size: 0.6em;">{{ result.title }}</b></div>
 		<div><i style="font-size: 0.4em; color: white">{{ result.instructor }}</i></div>
 	</div>
 	{% endfor %}
 
-</div>
+</div>-->
 
 <!-- End of Sidenav -->
 
@@ -67,26 +66,6 @@
 <div class="result" id="result-head"><h3></h3></div>
 <div class="container" id="search-results"> </div>
 
-<!-- Generate 10 random courses-->
-<div class="result"><h3>Random Courses</h3></div>
-<br>
-<div class="container">
-	{% for result in r_courses %}
-	<div class="flex-item3">
-		<img src="static/images/img2.png" style="width: 100%;">
-		<b>{{ result.title }}</b>
-		<br><i style="font-size: 0.8em">{{ result.instructor }}</i><br>
-		<button><a href='{{ result.url }}'>Visit</a></button>
-		<button name="{{ result.course_id }}"><a href='{{ result.url }}'>Save</a></button>
-	</div>
-        {% endfor %}
-</div>
-
-</div> <!-- end of main id -->
-<br>
-<br><br><br>
-<br>
-  <footer>&copy 2023</footer>
-
-</body>
-</html>
+<!-- Generate 10 random courses -->                        <div class="result"><h3>Random Courses</h3>                <div class="container">                                            {% for course in courses %}                                <div class="flex-item3">                                           <img src='../static/images/udemy.jpeg'>
+                <b>{{course[1]}}</b>                                       <br><i style="font-size: 0.8em">{{course[3]}}</i><br>                                                                 <button><a href='{{course[2]}}'>Visit</a></button>                                                                    <button><a href='{{course[2]}}'>Save</a></button>                                                             </div>                                                     {% endfor %}
+</div>                                                                                                                <br>                                                       <br><br><br>                                               <br>                                                         <footer>&copy 2023</footer>                                                                                         </body>                                                    </html>                                                    ~
