--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 <!--Modal Log in form -->
 
 <div id="f1" class="modal">
-        <form class="modal-content animate" action="/" method="POST">
+        <form class="modal-content animate" action="/user_page" method="POST">
                 <div class="closecontainer">
                         <span onclick="document.getElementById('f1').style.display='none'" class="close" title="Close Modal">&times;</span>
                 </div>
