--- a/static/style.css
+++ b/static/style.css
@@ -219,6 +219,7 @@ div.psw {
 	flex: 0 0 10em;
 	margin: auto;
 	border: 1px solid #1E90FF;
+	overflow: hidden;
 	
 }
 
@@ -227,12 +228,33 @@ div.psw {
 	color: white;
 	cursor: pointer;
 	border: none;
+	text-decoration: none;
+}
+
+.flex-item3 b {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	white-space: pre-wrap;
+	text-decoration: none;
+	font-size: 0.8em;
+	padding: 0;
+}
+.flex-item3 i {
+        text-overflow: ellipsis;
+	overflow: hidden;
+        white-space: nowrap;
+	font-size: 0.7em;
+	padding-top: 8px;
 }
 
 .flex-item3 a {
-	color: white;
+	pointer: cursor;
 	text-decoration: none;
+	padding: 0;
 }
+
 
 form.search-container input[type=text] {
 	padding: 10px;
