--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -75,7 +75,7 @@
 	<div class="flex-item3">
 		<img src="static/images/img2.png" style="width: 100%;">
 		<b>{{ result.title }}</b>
-		<br><i>{{ result.instructor }}</i><br>
+		<i>{{ result.instructor }}</i><br>
 		<button><a href='{{ result.url }}'>Visit</a></button>
 		<button name="{{ result.course_id }}"><a href='{{ result.url }}'>Save</a></button>
 	</div>
