--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -29,14 +29,7 @@
 <div id="bookmark_container" class="sidenav">
 	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
-	<!-- Saved Courses for the user comes in here -->
-	<!--<div style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
-                <a href='{{ result.url }}'><img src="static/images/img2.png" style="width: 100%;"></a>
-		<div><b style="color: white; font-size: 0.6em;">{{ result.title }}</b></div>
-		<div><i style="font-size: 0.4em; color: white">{{ result.instructor }}</i></div>
-	</div>
-
-</div>-->
+	
 
 <!-- End of Sidenav -->
 
@@ -75,7 +68,7 @@
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b> {{ result.title }} </b>
 		<i> {{ result.instructor }}  </i><br>
-		<button><a href='{{course[2]}}'>Visit</a></button>
+		<button><a href='{{result.url}}'>Visit</a></button>
 		<button><a href='{{ result.course_id }}'>Save</a></button>
 	</div>
 	{% endfor %}
