--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -31,7 +31,7 @@
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
 	<!-- Saved Courses for the user comes in here -->
 	{% for result in r_courses %}
-	<div style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
+	<div id="bookmark" style="border: 1px solid blue; width: 70%; margin-left: 17px; margin-bottom: 10px;">
                 <a href='{{ result.url }}'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<div><b style="color: white; font-size: 0.6em;">{{ result.title }}</b></div>
 		<div><i style="font-size: 0.4em; color: white">{{ result.instructor }}</i></div>
