Make savebtn on homepage to open sign up form

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <body>
 <header>Connect to Course
         <span class="btn-grp">
-                <button onclick="document.getElementById('f2').style.display='block'" style="width: auto;" type="button" class="btn">Sign Up</button>
+                <button onclick="document.getElementById('f2').style.display='block'" style="width: auto;" type="button" class="btn" id="sign">Sign Up</button>
                 <button onclick="document.getElementById('f1').style.display='block'" style="width: auto;" type="button" class="btn">Log in</button>
         </span>
 </header>
@@ -131,7 +131,7 @@
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b> {{ result.title }} </b>
 		<i> {{ result.instructor }}  </i><br>
-		<button><a href='{{ result.course_id }}'>Save</a></button>
+		<button class="savebtn">Save</button>
 	</div>
 	{% endfor %}
 </div>
