--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 
 <div class="container">
         <div class="flex-item1" style="padding-left: auto;"><h1 style="margin-top: 0px;">Learn everything in a place</h1>
-                <p>Seach for courses, get an up-to-date online courses and sign up for free to bookmark your prefered or choiced courses.</p>
+                <p>Seach for courses, get an up-to-date online courses and sign up for free to bookmark your preferred or choiced courses.</p>
         </div>
 
         <div class="flex-item1">
@@ -117,9 +117,11 @@
         </div>
 </div>
 
+
 <!-- Search Results comes in here -->
 <div class="result" id="result-head"><h3></h3></div>
 <div class="container" id="search-results"> </div>
+
 
 <!-- Generate 10 random courses -->
 <div class="result"><h3>Random Courses</h3></div>
