--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -3,7 +3,7 @@
 <head>
 <title>User page</title>
 <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 <meta charset="UTF-8">
 <meta name="description" content="connect to course">
 <meta name="author" name="Aluko and Mubarak">
@@ -11,6 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="static/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src='https://kit.fontawesome.com/a9534c06e2.js' crossorigin='anonymous'></script>
 <script src="static/ajax.js"></script>
 <script src="static/script.js"></script>
 </head>
@@ -34,7 +35,7 @@
 	<div id="bookmark">
                 <a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b style="color: white; font-size: 0.6em;">{{ result.title }}</b>
-		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i>
+		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i><i class="far fa-trash-alt" style="float: right; color: #eee; font-size: 0.5em;"></i>
 	</div>
 	{% endfor %}
 
@@ -76,7 +77,7 @@
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b>{{ result.title }}</b>
 		<i>By: {{ result.instructor }}</i><br>
-		<button name="{{ result.url }}">Save</button>
+		<button name="{{ result.url }}"><i class="fas fa-save"></i> Save</button>
 	</div>
         {% endfor %}
 </div>
