--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
 <title>Home page</title>
 <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 <meta charset="UTF-8">
 <meta name="description" content="connect to course">
 <meta name="author" name="Aluko and Mubarak">
 <meta name="keywords" content="free good best top online courses choice build career">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="static/style.css">
+<script src='https://kit.fontawesome.com/a9534c06e2.js' crossorigin='anonymous'></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="static/ajax.js"></script>
 <script src="static/script.js"></script>
@@ -98,6 +99,8 @@
 <!-- End of Sign up form -->
 
 
+<div id="main">
+
 
 <div class="container">
         <div class="flex-item1" style="padding-left: auto;"><h1 style="margin-top: 0px;">Learn everything in a place</h1>
@@ -122,22 +125,21 @@
 <div class="result" id="result-head"><h3></h3></div>
 <div class="container" id="search-results"> </div>
 
-
 <!-- Generate 10 random courses -->
 <div class="result"><h3>Random Courses</h3></div>
 <br>
-
 <div class="container">
 	{% for result in r_courses %}
 	<div class="flex-item3">
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b> {{ result.title }} </b>
 		<i>By: {{ result.instructor }}  </i><br>
-		<button class="savebtn" name='{{ result.url }}'>Save</button>
+		<button class="savebtn" name='{{ result.url }}'> <i class="fas fa-save"></i> Save</button>
 	</div>
 	{% endfor %}
 </div>
 
+</div>
 <br>
 <br><br><br>
 <br>
