--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -36,7 +36,7 @@
 		background-color: black;
      }
      .main {
-		background-image: url("bgimg.png");
+		background-image: url("static/images/bgimg.png");
 		width: 100%;
 		height: 75%;
 		background-repeat: no-repeat;
@@ -160,11 +160,11 @@
 <br id="feature">
 <br>
 <div class="container">
-<div class="flex-item"><img src="cTc1.png"></div>
+<div class="flex-item"><img src="static/images/cTc1.png"></div>
 <div class="flex-item"><b>Get up-to-date courses</b><p>Search for courses, get an up-to-date online course for free.</p></div>
 <div class="flex-item"><b>Save your courses</b><p>With our bookmark feature, you can save all the courses you are doing, or you intend to do in a place for easy access and reminder.</p></div>
-<div class="flex-item"><video style="border: 2px solid #2196f3;" width="35%" height="auto;" autoplay loop muted><source src="demo.mp4" type="video/mp4"></video> </div>
-<div class="flex-item"><img src="cTc2.png"></div>
+<div class="flex-item"><video style="border: 2px solid #2196f3;" width="35%" height="auto;" autoplay loop muted><source src="static/images/demo.mp4" type="video/mp4"></video> </div>
+<div class="flex-item"><img src="static/images/cTc2.png"></div>
 <div class="flex-item"><b>Go at your on pace</b><p>You can study at your own pace without loosing track having all your targets courses all put together.</p></div>
 </div>
 
