Work on bookmark/delete functionalities

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
 <div class="result"><h3>Random Courses</h3></div>
 <br>
 <div class="container">
-	{% for result in r_courses %}
+	{% for result in random_courses %}
 	<div class="flex-item3">
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b> {{ result.title }} </b>
