--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -31,11 +31,11 @@
 	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
 	<!-- Saved Courses for the user comes in here -->
-	{% for result in r_courses %}
+	{% for result in saved_courses %}
 	<div id="bookmark">
                 <a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b style="color: white; font-size: 0.6em;">{{ result.title }}</b>
-		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i><i class="far fa-trash-alt" style="float: right; color: #eee; font-size: 0.5em;"></i>
+		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i><button class="delete" data-id="{{ result.id }}" data-user_id="{{ user_id }}"> <i class="far fa-trash-alt" style="float: right; color: #eee; font-size: 0.5em;"></i></button>
 	</div>
 	{% endfor %}
 
@@ -49,6 +49,7 @@
 
 <div class="container"> 
 	<div class="flex-item1" style="padding-left: auto;"><h1  style="margin-top: 0px;">Learn everything in a place</h1>
+		<p>Welcome {{ username }}!</p>
 		<p>Seach for courses, get an up-to-date online courses and bookmark your preferred or choiced courses for free.</p>
 	</div>	
 	<div class="flex-item1">
@@ -72,12 +73,12 @@
 <div class="result"><h3>Random Courses</h3></div>
 <br>
 <div class="container">
-	{% for result in r_courses %}
+	{% for result in random_courses %}
 	<div class="flex-item3">
 		<a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b>{{ result.title }}</b>
 		<i>By: {{ result.instructor }}</i><br>
-		<button name="{{ result.url }}"><i class="fas fa-save"></i> Save</button>
+		<button class="savebtn" data-id="{{ result.id }}" data-user_id="{{ user_id }}"><i class="fas fa-save"></i> Save</button>
 	</div>
         {% endfor %}
 </div>
