Debug ajax.js file

--- a/static/style.css
+++ b/static/style.css
@@ -325,6 +325,12 @@ form.search-container::after {
 	padding: 8px;
 }
 
+.delete {
+    border: none;
+    background-color: #fff;
+    outline: none;
+}
+
 #main {
 	transition: margin-left 0.5s;
 }
