--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -23,7 +23,8 @@
 
 	<span style="cursor: pointer; float: left;" onclick="openNav()">&#9776;</span>
 </header>
-<hr style= "clear: both;">
+<br><br><br><br><br>
+<br style= "clear: both;">
 
 <!-- Sidenav for Courses Bookmark -->
 
@@ -44,7 +45,7 @@
 <!-- End of Sidenav -->
 
 
-<div id="main">  <!-- For the main body to shift for nav/bookmark pane -->
+<div id="main">
 
 
 <div class="container"> 
@@ -87,7 +88,9 @@
 <br>
 <br><br><br>
 <br>
-  <footer>&copy 2023</footer>
+<footer>
+	<span style='float: left;'>&copy 2023</span><a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>
+</footer>
 
 </body>
-</html>
+ </html>
