--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -38,7 +38,7 @@
      .main {
 		background-image: url("static/images/bgimg.png");
 		width: 100%;
-		height: 75%;
+		height: 100%;
 		background-repeat: no-repeat;
 		background-size: 100%;
 	}
@@ -161,7 +161,7 @@
 <br>
 <div class="container">
 <div class="flex-item"><img src="static/images/cTc1.png"></div>
-<div class="flex-item"><b>Get up-to-date courses</b><p>Search for courses, get an up-to-date online course for free.</p></div>
+<div class="flex-item"><b>Get up-to-date courses</b><p>Search for courses, and get an up-to-date online course for free.</p></div>
 <div class="flex-item"><b>Save your courses</b><p>With our bookmark feature, you can save all the courses you are doing, or you intend to do in a place for easy access and reminder.</p></div>
 <div class="flex-item"><video style="border: 2px solid #2196f3;" width="35%" height="auto;" autoplay loop muted><source src="static/images/demo.mp4" type="video/mp4"></video> </div>
 <div class="flex-item"><img src="static/images/cTc2.png"></div>
