--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
         </span>
 </header>
 
-<hr>
-
+<br>
+<br><br><br><br><br>
 
 
 <!--Modal Log in form -->
@@ -143,7 +143,9 @@
 <br>
 <br><br><br>
 <br>
-  <footer>&copy 2023</footer>
+  <footer>
+	  <span style='float: left;'>&copy  2023 </span><a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>	
+  </footer>
 
 </body>
 </html>
