--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="static/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src='https://kit.fontawesome.com/a9534c06e2.js' crossorigin='anonymous'></script>
+<input type="hidden" id="user-id" value="{{ user_id }}">
 <script src="static/ajax.js"></script>
 <script src="static/script.js"></script>
 </head>
@@ -89,7 +90,7 @@
 <br><br><br>
 <br>
 <footer>
-	<span style='float: left;'>&copy 2023</span><a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>
+	<a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>
 </footer>
 
 </body>
