--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -34,10 +34,10 @@
 	<p style="color: white; text-align: left-align; padding-left: 32px;">Bookmark</p>
 	<!-- Saved Courses for the user comes in here -->
 	{% for result in saved_courses %}
-	<div id="bookmark">
+	<div class="bookmark">
                 <a href='{{ result.url }}' target='_blank'><img src="static/images/img2.png" style="width: 100%;"></a>
 		<b style="color: white; font-size: 0.6em;">{{ result.title }}</b>
-		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i><span class="delete" data-id="{{ result.id }}" data-user_id="{{ user_id }}"> <i class="far fa-trash-alt" style="float: right; color: #eee; font-size: 0.5em;"></i></span>
+		<i style="font-size: 0.4em; color: white"> By: {{ result.instructor }}</i><span class="delete" data-id="{{ result.id }}" data-user_id="{{ user_id }}"> <i class="far fa-trash-alt"></i></span>
 	</div>
 	{% endfor %}
 
