add link for courses api in html files

--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -91,6 +91,8 @@
 <br>
 <footer>
 	<a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>
+	
+	<a href="{{ url_for('list_courses') }}">Course API</a>
 </footer>
 
 </body>
