--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -203,5 +203,6 @@ Frontend Developer<br>
 <br><br><br><br><br><br><br>
 <footer>
 <a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'  style='color: #1E90FF;'> Connect-to-Course</i></a>
+<a href="{{ url_for('list_courses') }}">Course API</a>
 </footer>
 </body>
