--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,9 @@
 <br><br><br>
 <br>
   <footer>
-	  <a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>	
+	  <a href='https://github.com/Mubarak1A/Connect-TO-Course'><i class='fa fa-github'></i>   Connect-to-Course  </a>
+
+	  <a href="{{ url_for('list_courses') }}">Course API</a>
   </footer>
 
 </body>
