--- a/static/style.css
+++ b/static/style.css
@@ -126,9 +126,30 @@ input[type=text]:focus, input[type=password]:focus {
 	max-width: 600px;
 }
 
-hr {
-	border: 1px solid #f1f1f1;
-	margin-bottom: 25px;
+/* Styling for the flash message modal */
+.flash-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.flash-modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  max-width: 600px;
+  width: 75%;
+  height: 25%;
+  margin: 5% auto 15% auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1E90FF;
+  font-size: 24px;
 }
 
 
