--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -46,6 +46,23 @@
 <!-- End of Sidenav -->
 
 
+<!-- Flash message modal -->
+  {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+      <div class="flash-modal">
+        <div class="flash-modal-content">
+          {% for category, message in messages %}
+            {% if category == 'success' %}
+              <div class="flash-message flash-success">{{ message }}</div>
+            {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+    {% endif %}
+  {% endwith %}
+<!-- End of flash message template-->
+
+
 <div id="main">
 
 
