--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                         <input type="password" placeholder="Enter Password" name="password" required>
 
 			<label style="margin-bottom:15px; font-size: 18px;"><input type="checkbox" checked="checked" name="remember">Remember me</label><br>
-                        <div style="text-align: center"><button type="submit" class="logbtn" name="loginbtn">Login</button></div>
+                        <div style="text-align: center"><button type="submit" id='login' class="logbtn" name="loginbtn">Login</button></div>
 
                 </div>
 
@@ -90,7 +90,7 @@
                 </label>
 
                 <div style="text-align: center">
-                <button type="submit" class="signupbtn" name="signupbtn">Sign Up</button>
+                <button type="submit" id='Signup' class="signupbtn" name="signupbtn">Sign Up</button>
                 </div>
 
         </div>
@@ -98,25 +98,7 @@
 
 </div>
 
-<!-- End of Sign up form -->
-  {% with messages = get_flashed_messages(with_categories=True) %}
-    {% if messages %}
-      <div class="flash-modal">
-        <div class="flash-modal-content">
-          {% for category, message in messages %}
-            {% if category == 'success' %}
-              <div class="flash-message flash-success">{{ message }}</div>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-
-    {% endif %}
-  {% endwith %}
-  
-  <!-- End of flash message template -->
-
-
+ 
 
 <div id="main">
 
