--- a/templates/User_page.html
+++ b/templates/User_page.html
@@ -27,6 +27,24 @@
 <br><br><br><br><br>
 <br style= "clear: both;">
 
+<!-- Flash message modal-->
+{% with messages = get_flashed_messages(with_categories=True) %}
+  {% if messages %}
+    <div class="flash-modal">
+      <div class="flash-modal-content">
+        {% for category, message in messages %}
+          {% if category == 'failure' %}
+            <div class="flash-message flash-danger">{{ message }}</div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  {% endif %}
+{% endwith %}
+<!--End of flash message template-->
+
+
+
 <!-- Sidenav for Courses Bookmark -->
 
 <div id="bookmark_container" class="sidenav">
