Search course button request type

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
                 <div class="flex-item2">
                         <img src="static/images/img.png" style="width: 170px;">
                                 <br><br>
-                                <form class="search-container" style="width: 100%;">
+                                <form class="search-container" style="width: 100%;" action="/search" method="GET">
                                         <input type="text" id="search-input" placeholder="Search.." required>
                                         <button type="submit"><i class="fa fa-search"></i></button>
                                 </form>
